repos/emily-python/contents/test/export/fail/private.em
# Symbol without export should NOT be exported
# Expect failure

println
	project.includeMe.b
